<?xml version="1.0"?>
<package format="2">
  <name>gundameus</name>
  <version>0.0.0</version>
  <description>The gundameus package</description>

  <maintainer email="shingogo.5511@gmail.com">Shingo Kitagawa</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gundam_rx78_description</build_depend>
  <build_depend>roseus</build_depend>

  <export>
  </export>
</package>
